# grid-points

./: README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/source/: api.rst  conf.py  index.rst
docs/source/_autosummary/: src.grid_points.rst
src/: grid_iterator_2d.py  point.py  point_2d.py
src/grid_iterator/: grid_iterator.py  grid_iterator_2d.py
src/grid_points/: __init__.py  grid_iterator_2d.py  grid_iterator_3d.py  point_2d.py  point_3d.py
tst/: test_grid_iterator_2d.py  test_grid_iterator_3d.py  test_point_2d.py  test_point_3d.py
uml/: class.puml
