# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "grid-points"
version = "1.0.0"
description = "Python library, which models a Point class. Mainly used for Advent of Code."
readme = "README.md"
authors = [{ name = "Lyuboslav Karev", email = "lyubo.karev@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPL License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["grid", "point"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/lyubolp/grid-points"
